compiler/fir/analysis-tests/testData/extendedCheckers/RedundantCallOfConversionMethod/char.kt
// WITH_RUNTIME
val foo = 'a'.<!REDUNDANT_CALL_OF_CONVERSION_METHOD!>toChar()<!>